fixed layout issue when only 4–5 cards are displayed

--- a/website/modules/asset/ui/src/scss/_leadership-team.scss
+++ b/website/modules/asset/ui/src/scss/_leadership-team.scss
@@ -34,6 +34,7 @@
 
   @include breakpoint-large {
     max-height: 383px;
+    max-width: 400px;
     margin-bottom: 0;
   }
 
